--- a/views/index.erb
+++ b/views/index.erb
@@ -11,7 +11,11 @@ SbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="ano
         <body bgcolor="#999999">
    <img id="image" src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_160x56dp
 .png"; draggable="true"; width="600"
-   ondragstart="drag(event)" width="800" height="300" alt="" />
+			 ondragstart="drag(event)" width="800" height="300" alt="" />
+
+	<script>
+		alert("Em Desenvolvimento..")
+        </script>
    <header>
 <h1>Bem-Vindo</h1>
 </header>
@@ -41,8 +45,11 @@ SbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="ano
                 <body>
         <img src="https://media.giphy.com/media/slBL4sbrz5SA8/giphy.gif"; height="50%"; width="100%"/>
         <img src="https://media.giphy.com/media/HVwzthU9RdA8U/giphy.gif"; height="50%"; width="100%"/>
-        <img src="https://media.giphy.com/media/l3c5LjEEiEAcifOW4/giphy.gif"; height="50%"; width="100
+   
+	<img src="https://media.giphy.com/media/l3c5LjEEiEAcifOW4/giphy.gif"; height="50%"; width="100
 	%"/>
+
+
 
                 </body>
                 <body>
