fixed infinite gif

--- a/views/index.erb
+++ b/views/index.erb
@@ -15,7 +15,9 @@ SbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="ano
 
 	<script>
 		alert("Em Desenvolvimento..")
-        </script>
+	</script>
+                </body>
+			<body>
    <header>
 <h1>Bem-Vindo</h1>
 </header>
@@ -28,14 +30,20 @@ SbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="ano
 <h1>Responderemos dentro de 24 horas.</h1>
   </aside>
  </section>
-        </article>
-<nav
+	</article>
+<nav>
 <ul>
-<li><a href="#">Home</a></li>
+	<li><a href="#">Home</a></li>
+	<script>
+		var link = document.getElementById("btn");
+	link.addEventListener('click', function() {
+        alert("Indisponivel.")
+	})
+	</script>
 <li><a href="#">Serviços</a></li>
 <li><a href="#">Suporte</a></li>
 <li><a href="#">Contate-nos</a></li>
-</ul>i
+</ul>
 </nav>
 <a><img href="<%= url('/images/https://goo.gl/images/TG8pR') %>" </a></img>
 </body>
@@ -46,12 +54,8 @@ SbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="ano
         <img src="https://media.giphy.com/media/slBL4sbrz5SA8/giphy.gif"; height="50%"; width="100%"/>
         <img src="https://media.giphy.com/media/HVwzthU9RdA8U/giphy.gif"; height="50%"; width="100%"/>
    
-	<img src="https://media.giphy.com/media/l3c5LjEEiEAcifOW4/giphy.gif"; height="50%"; width="100
-	%"/>
-
-
-
-                </body>
+	<img src="https://media.giphy.com/media/l3c5LjEEiEAcifOW4/giphy.gif"; height="100%"; width="100%"/>
+		</body>
                 <body>
 <audio src="/storage/extSdCard/Sounds/Nightcore - One Breath Away.mp3"controls autoplay>;
 <source src="/storage/extSdCard/Sounds/Nightcore - One Breath Away.mp3";type="audio/mpeg">;
@@ -61,9 +65,8 @@ SbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="ano
                 <body>
         <h2>Isso é a poha de um botão!</h2>
                 <button type="button"
-          onclick="alert('Sua jornada ao hacking começa aqui.')"<Clique em mim!</button>
+			onclick="alert('Sua jornada ao hacking começa aqui.')">Clique em mim!</button>
 
-                </body>
 <footer>
 <h6>Privacy Police</h6>
 </footer>
